<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Breeze</string>
    <string name="not_defined">Not Defined</string>

    <string name="home_icon_check_in">Check-in</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="unauthorized_practice_user">Unauthorized practice user.</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="no_account">There is no Clover account.</string>


    <string name="em_dash">&#8212;</string>

    <string name="entry_0">0</string>
    <string name="entry_1">1</string>
    <string name="entry_2">2</string>
    <string name="entry_3">3</string>
    <string name="entry_4">4</string>
    <string name="entry_5">5</string>
    <string name="entry_6">6</string>
    <string name="entry_7">7</string>
    <string name="entry_8">8</string>
    <string name="entry_9">9</string>
    <string name="entry_decimal">.</string>
    <string name="content_description_sign_in">Sign In</string>
    <string name="content_description_email">Email</string>
    <string name="content_description_password">Password</string>
    <string name="content_description_add_appointment">Add Appointment</string>
    <string name="content_description_patient_search">Patient Search</string>
    <string name="content_description_patient_list">Patient List</string>
    <string name="content_description_provider_list">Providers</string>
    <string name="content_description_continue">Continue</string>
    <string name="content_description_available_hours">Available Hours</string>
    <string name="content_description_visit_type">Visit Type</string>
    <string name="content_description_request_appointment">Request Appointment</string>
    <string name="content_description_check_in_home">Check-in Home</string>
    <string name="content_description_lock_icon">Lock Icon</string>
    <string name="content_description_check_in">Check-In</string>
    <string name="content_description_available_hours_list">Available Hours List</string>
    <string name="content_description_choose_provider">Choose Provider</string>
    <string name="content_description_choose_visit_type">Choose Visit Type</string>
    <string name="content_description_choose_location">Choose Location</string>
    <string name="content_description_location_list">Location List</string>
    <string name="content_description_provider_list_2">Provider List</string>
    <string name="content_description_visit_type_list">Visit Type List</string>
    <string name="content_description_appointments">Appointments</string>
    <string name="content_description_payments">Payments</string>
    <string name="content_description_change_mode_dialog">Change Mode Dialog</string>
    <string name="content_description_change_mode">Change Mode</string>
    <string name="content_description_patient_mode">Patient Mode</string>
    <string name="content_description_patient_mode_splash">Patient Mode Splash</string>
    <string name="content_description_patient_mode_splash_continue">Continue</string>
    <string name="content_description_patient_mode_main">Patient Mode Main Screen</string>
    <string name="content_description_how_to_login_screen">How To Login Screen</string>
    <string name="content_description_how_to_login_login_button">Login Button</string>
    <string name="content_description_check_in_screen">Check In Screen</string>
    <string name="content_description_appointments_button">Appointments Button</string>
    <string name="content_description_check_available_times_button">Check Available Times Button</string>
    <string name="content_description_find_a_patient">Find a Patient</string>
    <string name="content_description_total_amount_being_paid">Total amount being paid</string>
    <string name="content_description_apply_amount_button">Apply amount button</string>
    <string name="content_description_patient_balances_list">Patient Balances List</string>
    <string name="content_description_payments_button">Payments button</string>
    <string name="content_description_pay_partial_button">Pay Partial button</string>
    <string name="content_description_pay_total_button">Pay Total button</string>
    <string name="content_description_payment_plan_dashboard_screen">Payment Plan Dasboard Screen</string>
    <string name="content_description_payment_plan_dashboard_button">Payment Plan Dashboard Button</string>
    <string name="content_description_payment_plan_item_list">Payment plan item list</string>
    <string name="content_description_payment_plan_scroll">Payment Plan Scroll</string>
    <string name="content_description_payment_plan_detail_button">Payment Plan Detail</string>
    <string name="content_description_key_one">one</string>
    <string name="content_description_key_five">five</string>
    <string name="content_description_key_zero">zero</string>
    <string name="content_description_check_out">Check-Out</string>
    <string name="content_description_apply_amount">Apply Amount</string>

</resources>