<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/closeViewLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/button_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/dialog_button_bg" />

            <ImageView
                android:id="@+id/cancel_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/icn_close" />
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/dimen_26dp"
        android:layout_marginEnd="@dimen/dimen_26dp"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/apt_dl_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/patient_mode_dialog_header_bg"
            android:gravity="center"
            android:orientation="vertical">

            <com.carecloud.carepaylibray.customcomponents.CarePayTextView
                android:id="@+id/enter_amount_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_25dp"
                android:paddingStart="@dimen/dimen_25dp"
                android:paddingEnd="@dimen/dimen_25dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:text="How much will you be paying today?"
                app:customAssetFont="gotham_rounded_medium"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="@dimen/dimen_15dp">

                <com.carecloud.carepaylibray.customcomponents.CarePayTextView
                    android:id="@+id/amountSymbolTextView"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/calculator_entry_text"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white_transparent"
                    android:layout_height="wrap_content"
                    android:text="$"
                    app:customAssetFont="gotham_rounded_medium"/>

                <com.carecloud.carepaylibray.customcomponents.CarePayEditText
                    android:id="@+id/enter_amount_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="@dimen/calculator_entry_text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_transparent"
                    android:inputType="numberDecimal"
                    android:background="@android:color/transparent"
                    android:hint="0.00"
                    app:customAssetFont="gotham_rounded_medium"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@color/white"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingBottom="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_100dp"
            android:paddingEnd="@dimen/dimen_100dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.carecloud.carepaylibray.customcomponents.CustomGothamRoundedMediumButton
                    android:id="@+id/key_one"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="@dimen/button_width"
                    android:background="@drawable/key_selector"
                    android:text="@string/entry_1"
                    android:gravity="center"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/button_pin_text_size" />

                <View
                    android:layout_width="@dimen/key_border_width"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray"/>

                <com.carecloud.carepaylibray.customcomponents.CustomGothamRoundedMediumButton
                    android:id="@+id/key_two"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="@dimen/button_width"
                    android:background="@drawable/key_selector"
                    android:gravity="center"
                    android:text="@string/entry_2"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/button_pin_text_size" />

                <View
                    android:layout_width="@dimen/key_border_width"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray"/>

                <com.carecloud.carepaylibray.customcomponents.CustomGothamRoundedMediumButton
                    android:id="@+id/key_three"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="@dimen/button_width"
                    android:background="@drawable/key_selector"
                    android:text="@string/entry_3"
                    android:gravity="center"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/button_pin_text_size" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/key_border_width"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.carecloud.carepaylibray.customcomponents.CustomGothamRoundedMediumButton
                    android:id="@+id/key_four"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="@dimen/button_width"
                    android:background="@drawable/key_selector"
                    android:gravity="center"
                    android:text="@string/entry_4"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/button_pin_text_size" />

                <View
                    android:layout_width="@dimen/key_border_width"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray"/>

                <com.carecloud.carepaylibray.customcomponents.CustomGothamRoundedMediumButton
                    android:id="@+id/key_five"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="@dimen/button_width"
                    android:background="@drawable/key_selector"
                    android:text="@string/entry_5"
                    android:gravity="center"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/button_pin_text_size" />

                <View
                    android:layout_width="@dimen/key_border_width"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray"/>

                <com.carecloud.carepaylibray.customcomponents.CustomGothamRoundedMediumButton
                    android:id="@+id/key_six"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="@dimen/button_width"
                    android:background="@drawable/key_selector"
                    android:text="@string/entry_6"
                    android:gravity="center"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/button_pin_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/key_border_width"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.carecloud.carepaylibray.customcomponents.CustomGothamRoundedMediumButton
                    android:id="@+id/key_seven"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="@dimen/button_width"
                    android:background="@drawable/key_selector"
                    android:text="@string/entry_7"
                    android:gravity="center"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/button_pin_text_size" />

                <View
                    android:layout_width="@dimen/key_border_width"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray"/>

                <com.carecloud.carepaylibray.customcomponents.CustomGothamRoundedMediumButton
                    android:id="@+id/key_eighth"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="@dimen/button_width"
                    android:background="@drawable/key_selector"
                    android:text="@string/entry_8"
                    android:gravity="center"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/button_pin_text_size" />

                <View
                    android:layout_width="@dimen/key_border_width"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray"/>

                <com.carecloud.carepaylibray.customcomponents.CustomGothamRoundedMediumButton
                    android:id="@+id/key_nine"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="@dimen/button_width"
                    android:background="@drawable/key_selector"
                    android:text="@string/entry_9"
                    android:gravity="center"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/button_pin_text_size" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/key_border_width"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.carecloud.carepaylibray.customcomponents.CustomGothamRoundedMediumButton
                    android:id="@+id/key_blank"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="@dimen/button_width"
                    android:background="@drawable/key_selector"
                    android:text="@string/entry_decimal"
                    android:gravity="center"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/button_pin_text_size" />

                <View
                    android:layout_width="@dimen/key_border_width"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray"/>

                <com.carecloud.carepaylibray.customcomponents.CustomGothamRoundedMediumButton
                    android:id="@+id/key_zero"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="@dimen/button_width"
                    android:background="@drawable/key_selector"
                    android:text="@string/entry_0"
                    android:gravity="center"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/button_pin_text_size" />

                <View
                    android:layout_width="@dimen/key_border_width"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray"/>

                <LinearLayout
                    android:id="@+id/key_clear"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="@dimen/button_width"
                    android:layout_gravity="center"
                    android:background="@drawable/key_selector"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/button_delete_key_width"
                        android:layout_height="@dimen/button_delete_key_height"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_keyboard_delete"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/patient_mode_dialog_body_bg">

            <com.carecloud.carepaylibray.customcomponents.CarePayButton
                android:id="@+id/enter_amount_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PaymentButtonStyle"
                android:background="@drawable/bg_yellow_overlay"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/dimen_20dp"
                app:customAssetFont="gotham_rounded_medium" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/search_content"
        android:visibility="invisible">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/dialog_button_bg" />

    </LinearLayout>

</LinearLayout>